tests/ui/recursion/recursion_limit/invalid_digit_type.stderr
error[E0539]: malformed `recursion_limit` attribute input
  --> $DIR/invalid_digit_type.rs:1:1
   |
LL | #![recursion_limit = 123]
   | ^^^^^^^^^^^^^^^^^^^^^---^
   | |                    |
   | |                    expected a string literal here
   | help: must be of the form: `#![recursion_limit = "N"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/limits.html#the-recursion_limit-attribute>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
